fix: overflow-x hidden

--- a/styles.css
+++ b/styles.css
@@ -1393,6 +1393,9 @@ footer {
 }
 
 @media (max-width: 600px) {
+    body {
+        overflow-x: hidden;
+    }
     #nav {
         justify-content: space-between;
         padding: .85rem 1.2rem;
